# streammine3g-hybrid-query-adapter

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Event.pb.c1  Event.pb.cc  Event.pb.cpp  Event.pb.h  Makefile  README.md  ReadMe.txt  cmake_install.cmake  manager.txt
Events/: CMakeCache.txt  CMakeLists.txt  Event.proto  Makefile  cmake_install.cmake
src/: GPBMessageListener.hpp  GPBPatch.cpp  GPBPatch.hpp  JBossNettyAdapter.cpp  JBossNettyAdapter.hpp  SampleManager.cpp  SampleManager.hpp  SamplePartitioner.cpp  SamplePartitioner.hpp
src/DataSourceAdapter/: AbstractDataSourceAdapter.h  MongoDbDataSourceAdapter.cpp  MongoDbDataSourceAdapter.h  RealTimeDataSourceAdapter.cpp  RealTimeDataSourceAdapter.h
src/gridfs/: Dep2_MyGridFS.cpp  Dep2_MyGridFS.h  Dep_MyGridFS.cpp  Dep_MyGridFS.h  MyGridFS.cpp  MyGridFS.h
src/operations/: EndOfStreamHandler.cpp  EndOfStreamHandler.h  operations.cpp  operations.h
src/operators/: Accessop.cpp  Accessop.h  Constants.h  DefaultOperator.cpp  DefaultOperator.hpp  Mapper.cpp  Mapper.h  OperatorImpl.cpp  OperatorImpl.hpp  Workerop.cpp  Workerop.h
src/proto/: SMByteArrayHeader.pb.cc  SMByteArrayHeader.pb.h  SMByteArrayHeader.proto  SMOperatorInitParam.pb.cc  SMOperatorInitParam.pb.h  SMOperatorInitParam.proto
src/socket/: ClientSocket.cpp  ClientSocket.h  Socket.cpp  Socket.h  _ClientSocketOld.cpp
test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  TestRunner.cpp  cmake_install.cmake  my_project_tests
test/DataSourceAdapter/: MongoDbDataSourceAdapterTest.cpp  MongoFilesGen.cpp  RealTimeDataSourceAdapterTest.cpp  output.txt
